# blackhighsea

./: .gitignore  docker-compose.yaml  start-docker-compose.sh  stop-docker-compose.sh  test.py
api/nginx-static/: default.conf
api/py-cartoongan/app/: app-server.py
api/py-cartoongan/docker/: Dockerfile
api/py-flask/: Dockerfile  docker.sh
api/py-flask-torch/: .gitignore  Dockerfile
api/py-flask-torch/app/app/: main.py
api/py-flask/app/: stockname.py
api/py-flask/app/app/: main.py
api/py-flask/app/data/: 600104.csv  600198.csv  600487.csv
api/py-flask/docker/: Dockerfile
api/py-selenium/: Dockerfile
api/py-selenium/app/: app.py  news.py  stock300.py  stock_fund.py  useragent.py
api/py-tornado/app/: .gitignore  Dockerfile  wsserver.py
api/py-tornado/app/docker/: Dockerfile
api/py-websocket/app/: Dockerfile  cartoongan.py  httpserver.py  index.py  wsserver.py
api/py-websocket/docker/: Dockerfile
cartoongan/: .gitignore  CMakeLists.txt  README.md  config.json  docker.sh  main copy.cpp  main.cpp
cartoongan/docker/: Dockerfile
cpp-socket/: CMakeLists.txt  single_connection.cpp
cpp/docker/: Dockerfile
cpp/socket/: CMakeLists.txt  main.cpp  serv.c
k8s/: deployment-cpp-stylize.yaml  kind-local-registry.sh  pod-cpp-stylize.yaml  pvc.yaml  svc-cpp-stylize.yaml  svc-nginx-static.yaml  svc-tornado-cartoongan.yaml  svc-wsserver.yaml
optimization/: .gitignore  presubmit_tests.py  run.py  task1_optimization.py  task2_optimization.py
optimization/task1/: presubmit_tests.py  task1_optimization.py
optimization/task2/: presubmit_tests.py  task2_optimization.py
optimization/task3/: optimization.py  oracles.py  presubmit_tests.py  task3_optimization.py  task3_optimization_old.py
optimization/task4/: presubmit_tests.py  task4_optimization.py
phaser/app/: package.json
phaser/app/src/: index.html
phaser/app/src/scripts/: game.ts
phaser/app/webpack/: webpack.dev.js
phaser/docker/: Dockerfile
stock-prediction/: fetch_data.py
tf/: README.md  requirements.txt
tf/stock-prediction/: preprocess.py
tf/stockPrediction/: .gitignore  fetch_data.py  lstm.py  mlp.py  preprocess.py
torch/: .gitignore  requirements.txt
torch/cartoonGan/: .gitignore  CMakeLists.txt  main.cpp
torch/cartoonGan/docker/: Dockerfile  docker.sh
torch/gan-model/: CMakeLists.txt  gan-model.cpp
torch/stockPrediction/: .gitignore  lstm.py  preprocess.py  requirements.txt
torch/superResolution/: .gitignore  CMakeLists.txt  main.cpp
web/: Dockerfile  docker.sh
web/app/: .env.development  .eslintrc.js  package-lock.json  package.json  vue.config.js
web/app/src/: App.vue  main.ts
web/app/src/components/: ChartLine.vue  Greeting.vue  UploadImages.vue
web/app/src/locales/: en.json
web/app/src/router/: index.ts
web/app/src/store/: index.ts
web/app/src/views/: Home.vue  LineChart.vue  StockList.vue  Stylize.vue
